--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
 
     <!-- end -->
 
+    <!-- paypal donation script-->
+    <!--end-->>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -39,9 +41,9 @@
     -->
     <title>React App</title>
 </head>
-  <body>
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-      <div id="root"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -52,5 +54,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+    <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
+
+</body>
 </html>
